--- a/tabs/about.html
+++ b/tabs/about.html
@@ -1,4 +1,4 @@
-# Update 2023-01-06 / Init "About : A propos"
+# Update 2023-01-06 / Init "Tabs/About.html" = " A propos de ce site Web"
 
 <H2> Ce qui me meut ... </H2>
 
