--- a/tabs/about.html
+++ b/tabs/about.html
@@ -1,24 +1,28 @@
-/*
-// Update 2023-01-06 / Init "Tabs/About.html" = " A propos de ce site Web"
-*/
+<!-- -->
+<!-- Update 2023-01-06 / Init "Tabs/About.html" = " A propos de ce site Web et de ses motivations" -->
+<!-- -->
 
 <H2> Ce qui me meut ... </H2>
 
 Depuis tout petit, j'aime bien jouer avec les données afin de les faire parler et de leur demander de décrire le passé et le présent.
-Et, même, parfois, de prédire l'avenir ...
-
-Cela a commencé par la météorologie.
+Et, même, parfois, de prédire l'avenir ... <br>
+<br>
+Cela a commencé par la météorologie. <br>
 J'ai toujours aimé noter les températures, la pression barométrique, la direction et la force du vent, la pluviométrie.
-Et, avec ces séries temporelles, je me suis amusé à essayer de prevoir le temps qu'il ferait plus tard.
-
-Evidemment, les extrapolations linéaires ne suffisent pas à prévoir le temps météo.
-Il m'a bien fallu apprendre à modéliser les phénomènes météorologiques.
-Et, ça, c'est une science à part entière.
-
-C'est ainsi que j'ai entrepris des études de physique puis d'informatique.
-
-La météorologie est une science bien utile pour faire du yachting (navigation à voile, en bon français).
-C'est ma deuxième passion. Pouvoir se déplacer où on veut sans consommer d'énergie fossile. Le rêve !
+Et puis, avec ces séries temporelles, je me suis amusé à essayer de prevoir le temps qu'il ferait plus tard. <br>
+<br>
+Evidemment, les extrapolations linéaires ne suffisent pas à prévoir le temps météo. <br>
+Il m'a bien fallu apprendre à modéliser les phénomènes météorologiques.  <br>
+Et, ça, c'est une science à part entière. <br>
+<br>
+C'est ainsi que j'ai entrepris des études de physique puis d'informatique. <br>
+<br>
+La météorologie est une science bien utile pour faire du yachting (navigation à voile, en bon français). <br>
+C'est ma deuxième passion. Pouvoir se déplacer où on veut sans consommer d'énergie fossile. Le rêve ! <br>
+<br>
+Et, ainsi, de fil en aiguille, je me suis intéressé au calcul nulmérique intebsif et au traitement des grands volumes de données. <br>
+<br>
+<br>
 
 
 
