--- a/tabs/about.html
+++ b/tabs/about.html
@@ -17,11 +17,16 @@ Et, ça, c'est une science à part entière. <br>
 <br>
 C'est ainsi que j'ai entrepris des études de physique puis d'informatique. <br>
 <br>
-La météorologie est une science bien utile pour faire du yachting (navigation à voile, en bon français). <br>
+La météorologie est une science bien utile pour faire du <i>yachting</i> (navigation à voile, en bon français). <br>
 C'est ma deuxième passion. Pouvoir se déplacer où on veut sans consommer d'énergie fossile. Le rêve ! <br>
 <br>
-Et, ainsi, de fil en aiguille, je me suis intéressé au calcul nulmérique intebsif et au traitement des grands volumes de données. <br>
+<br> Météorologie, <i>yachting</i>, etc. ces deux activités font nécessairement usage de cartes. Et la cartographie consomme des données à la fois pour représenter 
+graphiquement les cartes et pour mettre des inforlmations structurées en visibilité sur ces cartes (en 2D ou en 3D). <br>
+Et, ainsi, de fil en aiguille, je me suis intéressé au calcul nulmérique intensif et au traitement des grands volumes de données. <br>
 <br>
+<br>
+Et là, la palette des applications est potentiellement illimitée ... <br>
+Et j'aime l'infini ...<br>
 <br>
 
 
