Update Tabs/About.html 2023-01-06-(012)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -22,6 +22,7 @@ C'est ma deuxième passion. Pouvoir se déplacer où on veut sans consommer d'é
 <br>
 <br> Météorologie, <i>yachting</i>, etc. ces deux activités font nécessairement usage de cartes. Et la cartographie consomme des données à la fois pour représenter 
 graphiquement les cartes et pour mettre des inforlmations structurées en visibilité sur ces cartes (en 2D ou en 3D). <br>
+<br>
 Et, ainsi, de fil en aiguille, je me suis intéressé au calcul nulmérique intensif et au traitement des grands volumes de données. <br>
 <br>
 <br>
@@ -29,5 +30,5 @@ Et là, la palette des applications est potentiellement illimitée ... <br>
 Et j'aime l'infini ...<br>
 <br>
 
-
+<img class="img-responsive" src="assets/img/projects/en-travaux.gif" alt="">
 
