Update Tabs/About.html 2023-01-06-(015)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -30,5 +30,16 @@ Et là, la palette des applications est potentiellement illimitée ... <br>
 Et j'aime l'infini ...<br>
 <br>
 
-<img class="img-responsive" src="assets/img/projects/en-travaux.gif" alt="">
 
+<div class="container">
+            <div class="row">
+                <div class="col-lg-12">
+                    <img class="img-responsive" src="assets/img/projects/en-travaux.gif" alt="">
+                    <div class="intro-text">
+                        <span class="skills">Entrée gratuite. Repas fourni sur place le midi.</span>
+                        <hr class="star-light">
+                        <h2 class="skills">Les inscriptions sont ouvertes <br>(Voir un peu plus loin <q> S'INCRIRE </q>).</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
