--- a/tabs/about.html
+++ b/tabs/about.html
@@ -36,9 +36,9 @@ Et j'aime l'infini ...<br>
                 <div class="col-lg-12">
                     <img class="img-responsive" src="assets/img/projects/en-travaux.gif" alt="">
                     <div class="intro-text">
-                        <span class="skills">Entrée gratuite. Repas fourni sur place le midi.</span>
+                        <span class="skills"> Travail en cours. /span>
                         <hr class="star-light">
-                        <h2 class="skills">Les inscriptions sont ouvertes <br>(Voir un peu plus loin <q> S'INCRIRE </q>).</h2>
+                        <h2 class="skills"> Merci de patienter ... </h2>
                     </div>
                 </div>
             </div>
