--- a/tabs/about.html
+++ b/tabs/about.html
@@ -34,9 +34,9 @@ Et j'aime l'infini ...<br>
 <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="assets/img/projects/en-travaux.gif" alt="">
+                    <img class="img-responsive" src="../../assets/img/projects/en-travaux.gif" alt="">
                     <div class="intro-text">
-                        <span class="skills"> Travail en cours. /span>
+                        <span class="skills"> Travail en cours. </span>
                         <hr class="star-light">
                         <h2 class="skills"> Merci de patienter ... </h2>
                     </div>
