--- a/tabs/about.html
+++ b/tabs/about.html
@@ -30,16 +30,16 @@ Et là, la palette des applications est potentiellement illimitée ... <br>
 Et j'aime l'infini ...<br>
 <br>
 
-
+<!-- Header -->
+<header>
 <div class="container">
             <div class="row">
-                <div class="col-lg-12">
-                    <img class="img-responsive" src="../../assets/img/projects/en-travaux.gif" alt="">
-                    <div class="intro-text">
-                        <span class="skills"> Travail en cours. </span>
-                        <hr class="star-light">
-                        <h2 class="skills"> Merci de patienter ... </h2>
+               <div align = "center">
+                    <img  src="../../assets/img/projects/en-travaux.gif" class="img-responsive">
+                        <H4> Travail en cours. </H4>
+                        <H3 Merci de patienter ... </H3>
                     </div>
                 </div>
             </div>
         </div>
+  </header>
