--- a/tabs/about.html
+++ b/tabs/about.html
@@ -20,11 +20,10 @@ C'est ainsi que j'ai entrepris des études de physique puis d'informatique. <br>
 La météorologie est une science bien utile pour faire du <i>yachting</i> (navigation à voile, en bon français). <br>
 C'est ma deuxième passion. Pouvoir se déplacer où on veut sans consommer d'énergie fossile. Le rêve ! <br>
 <br>
-<br> Météorologie, <i>yachting</i>, etc. ces deux activités font nécessairement usage de cartes. Et la cartographie consomme des données à la fois pour représenter 
-graphiquement les cartes et pour mettre des inforlmations structurées en visibilité sur ces cartes (en 2D ou en 3D). <br>
+<br> Météorologie, <i>yachting</i>, etc. ces deux activités font nécessairement usage de cartes. Et la cartographie consomme beaucoup de données à la fois pour représenter 
+graphiquement les cartes et pour rendre visibles des informations structurées sur ces cartes (en 2D ou en 3D). <br>
 <br>
 Et, ainsi, de fil en aiguille, je me suis intéressé au calcul nulmérique intensif et au traitement des grands volumes de données. <br>
-<br>
 <br>
 Et là, la palette des applications est potentiellement illimitée ... <br>
 Et j'aime l'infini ...<br>
