Update Main/Tabs/About.html 2023-01-06-(020)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -23,7 +23,7 @@ C'est ma deuxième passion. Pouvoir se déplacer où on veut sans consommer d'é
 <br> Météorologie, <i>yachting</i>, etc. ces deux activités font nécessairement usage de cartes. Et la cartographie consomme beaucoup de données à la fois pour représenter 
 graphiquement les cartes et pour rendre visibles des informations structurées sur ces cartes (en 2D ou en 3D). <br>
 <br>
-Et, ainsi, de fil en aiguille, je me suis intéressé au calcul nulmérique intensif et au traitement des grands volumes de données. <br>
+Et, ainsi, de fil en aiguille, je me suis intéressé au calcul numérique intensif et au traitement des grands volumes de données. <br>
 <br>
 Et là, la palette des applications est potentiellement illimitée ... <br>
 Et j'aime l'infini ...<br>
@@ -34,7 +34,7 @@ Et j'aime l'infini ...<br>
         <div class="container">
                 <div class="row">
                     <div align = "center">
-                    <img  src="../../assets/img/projects/en-travaux.gif" class="img-responsive">
+                    <img  src="../assets/img/projects/en-travaux.gif" class="img-responsive">
                         <H4> Travail en cours. </H4>
                         <H3 Merci de patienter ... </H3>
                     </div>
