Update Main/Tabs/About.html 2023-01-06-(031)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -36,7 +36,7 @@ Et j'aime l'infini ...<br>
                     <div align = "center">
                     <img  src="../assets/img/projects/en-travaux.gif" class="img-responsive">
                         <H4> Travail en cours. </H4>
-                        <H3 Merci de patienter ... </H3>
+                        <H3>  Merci de patienter ... </H3>
                     </div>
                 </div>
           </div>
