Update Tabs/About.html 2023-01-07-(002)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -34,7 +34,7 @@ Et j'aime l'infini ...<br>
         <div class="container">
                 <div class="row">
                     <div align = "center">
-                    <img  src="../assets/img/projects/en-travaux.gif" class="img-responsive">
+                    <img  src="../assets/img/default/Conf_15.jpg" class="img-responsive">
                         <H4> Travail en cours. </H4>
                         <H3>  Merci de patienter ... </H3>
                     </div>
