Update Tabs/About.html 2023-01-07-(005)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -35,8 +35,8 @@ Et j'aime l'infini ...<br>
                 <div class="row">
                     <div align = "center">
                     <img  src="../assets/img/default/Conf_15.jpg" class="img-responsive">
-                        <H4> Travail en cours. </H4>
-                        <H3>  Merci de patienter ... </H3>
+                        <H4> Affaire en cours . . . </H4>
+                        <H3>  ... </H3>
                     </div>
                 </div>
           </div>
