--- a/tabs/about.html
+++ b/tabs/about.html
@@ -1,8 +1,22 @@
 <!-- -->
-<!-- Update 2023-01-06 / Init "Tabs/About.html" = " A propos de ce site Web et de ses motivations" -->
+<!-- Update 2023-01-10 / Update "Tabs/About.html" = " A propos de ce site Web et de ses motivations" -->
 <!-- -->
 
-<H2> Ce qui me meut ... </H2>
+<!-- Header -->
+<header>
+        <div class="container">
+                <div class="row">
+                    <div align = "center">
+                    <img  src="../assets/img/about/about.jpg" class="img-responsive">
+                        <H4> A propos de cet site Web et de ses motivations </H4>
+                        <H3>  ... </H3>
+                    </div>
+                </div>
+          </div>
+</header>
+
+
+<H2> Ce qui me meut ... </H2><H4> par le Professeur Calculus </H4>
 
 Depuis tout petit, j'aime bien jouer avec les données afin de les faire parler et de leur demander de décrire le passé et le présent.
 Et, même, parfois, de prédire l'avenir ... <br>
@@ -26,11 +40,12 @@ graphiquement les cartes et pour rendre visibles des informations structurées s
 Et, ainsi, de fil en aiguille, je me suis intéressé au calcul numérique intensif et au traitement des grands volumes de données. <br>
 <br>
 Et là, la palette des applications est potentiellement illimitée ... <br>
-Et j'aime l'infini ...<br>
+Or j'aime l'infini ...<br>
 <br>
 
-<!-- Header -->
-<header>
+
+<!-- Footer -->
+<footer>
         <div class="container">
                 <div class="row">
                     <div align = "center">
@@ -40,4 +55,15 @@ Et j'aime l'infini ...<br>
                     </div>
                 </div>
           </div>
-</header>
+</footer>
+<br> <br>
+<H4> Pour en savoir plus sur le Professeur Calculus </H4> 
+<H5> Voici l'adresse Linkedin  <a href="https://fr.linkedin.com/in/didier-certain-46950a1"> Linkedin </a> </H5>
+
+<H4> For more information about Pr. Calculus </H4>
+<H5> Here is the Linkedin adress  <a href="https://fr.linkedin.com/in/didier-certain-46950a1"> Linkedin </a> </H5>
+
+
+
+
+
