Update Main/Tabs/About.html 2023-01-10-(002)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -57,11 +57,9 @@ Or j'aime l'infini ...<br>
           </div>
 </footer>
 <br> <br>
-<H4> Pour en savoir plus sur le Professeur Calculus </H4> 
-<H5> Voici l'adresse Linkedin  <a href="https://fr.linkedin.com/in/didier-certain-46950a1"> Linkedin </a> </H5>
+<H4> Pour en savoir plus sur le Professeur Calculus / For more information about Pr. Calculus </H4> 
+<H5> Voici l'adresse Linkedin  / Here is the Linkedin adress <a href="https://fr.linkedin.com/in/didier-certain-46950a1"> Linkedin </a> </H5>
 
-<H4> For more information about Pr. Calculus </H4>
-<H5> Here is the Linkedin adress  <a href="https://fr.linkedin.com/in/didier-certain-46950a1"> Linkedin </a> </H5>
 
 
 
