--- a/tabs/about.html
+++ b/tabs/about.html
@@ -4,6 +4,7 @@
 
 <!-- Header -->
 <header>
+        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
         <div class="container">
                 <div class="row">
                     <div align = "center">
