Update Main/Tabs/About.html 2023-01-11-(002)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -5,6 +5,7 @@
 <!-- Header -->
 <header>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+        header {font-family: 'Roboto', Arial, sans-serif; }
         <div class="container">
                 <div class="row">
                     <div align = "center">
