Update Main/Tabs/About.html 2023-01-11-(003)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -1,11 +1,12 @@
 <!-- -->
 <!-- Update 2023-01-10 / Update "Tabs/About.html" = " A propos de ce site Web et de ses motivations" -->
 <!-- -->
-
+<TITLE> <H4> A propos de cet site Web et de ses motivations </H4> </TITLE>
+<STYLE="font-family: Arial; font-size: 12px">
 <!-- Header -->
 <header>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        header {font-family: 'Roboto', Arial, sans-serif; }
+        <STYLE="font-family: 'Roboto', Arial, sans-serif; ">
         <div class="container">
                 <div class="row">
                     <div align = "center">
