Update Main/Tabs/About.html 2023-01-11-(004)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -1,8 +1,10 @@
 <!-- -->
 <!-- Update 2023-01-10 / Update "Tabs/About.html" = " A propos de ce site Web et de ses motivations" -->
 <!-- -->
-<TITLE> <H4> A propos de cet site Web et de ses motivations </H4> </TITLE>
+<TITLE> A propos de cet site Web et de ses motivations </TITLE>
 <STYLE="font-family: Arial; font-size: 12px">
+<H4> A propos de cet site Web et de ses motivations </H4> 
+  
 <!-- Header -->
 <header>
         <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
