--- a/tabs/about.html
+++ b/tabs/about.html
@@ -1,14 +1,17 @@
 <!-- -->
-<!-- Update 2023-01-10 / Update "Tabs/About.html" = " A propos de ce site Web et de ses motivations" -->
+<!-- Update 2023-01-10 etc./ Update "Tabs/About.html" = " A propos de ce site Web et de ses motivations" -->
 <!-- -->
+
+<!-- 0 : Head -->
+<HEAD>
 <TITLE> A propos de cet site Web et de ses motivations </TITLE>
 <STYLE="font-family: Arial; font-size: 12px">
-<H4> A propos de cet site Web et de ses motivations </H4> 
+</HEAD>
   
-<!-- Header -->
+<!-- 1 : Header -->
 <header>
-        <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
-        <STYLE="font-family: 'Roboto', Arial, sans-serif; ">
+        <H4> A propos de cet site Web et de ses motivations </H4> 
+
         <div class="container">
                 <div class="row">
                     <div align = "center">
@@ -20,7 +23,8 @@
           </div>
 </header>
 
-
+  <!-- 2 : Body -->
+<BODY>
 <H2> Ce qui me meut ... </H2><H4> par le Professeur Calculus </H4>
 
 Depuis tout petit, j'aime bien jouer avec les données afin de les faire parler et de leur demander de décrire le passé et le présent.
@@ -47,10 +51,10 @@ Et, ainsi, de fil en aiguille, je me suis intéressé au calcul numérique inten
 Et là, la palette des applications est potentiellement illimitée ... <br>
 Or j'aime l'infini ...<br>
 <br>
+</BODY>
 
-
-<!-- Footer -->
-<footer>
+<!-- 3 : Footer -->
+<FOOTER>
         <div class="container">
                 <div class="row">
                     <div align = "center">
@@ -60,11 +64,12 @@ Or j'aime l'infini ...<br>
                     </div>
                 </div>
           </div>
-</footer>
+
 <br> <br>
 <H4> Pour en savoir plus sur le Professeur Calculus / For more information about Pr. Calculus </H4> 
 <H5> Voici l'adresse Linkedin  / Here is the Linkedin adress <a href="https://fr.linkedin.com/in/didier-certain-46950a1"> Linkedin </a> </H5>
 
+</FOOTER>
 
 
 
