Update Main/Tabs/About.html 2023-01-11-(006)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -1,7 +1,8 @@
 <!-- -->
 <!-- Update 2023-01-10 etc./ Update "Tabs/About.html" = " A propos de ce site Web et de ses motivations" -->
 <!-- -->
-
+<HTML>
+  
 <!-- 0 : Head -->
 <HEAD>
 <TITLE> A propos de cet site Web et de ses motivations </TITLE>
@@ -72,6 +73,6 @@ Or j'aime l'infini ...<br>
 </FOOTER>
 
 
-
+</HTML>
 
 
