Update Main/Tabs/About.html 2023-01-11-(007)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -1,7 +1,8 @@
+<!DOCTYPE HTML>
+<HTML>
 <!-- -->
 <!-- Update 2023-01-10 etc./ Update "Tabs/About.html" = " A propos de ce site Web et de ses motivations" -->
 <!-- -->
-<HTML>
   
 <!-- 0 : Head -->
 <HEAD>
