Update Main/Tabs/About.html 2023-01-11-(007)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -6,19 +6,19 @@
   
 <!-- 0 : Head -->
 <HEAD>
-<TITLE> A propos de cet site Web et de ses motivations </TITLE>
-<STYLE="font-family: Arial; font-size: 12px">
+<TITLE> A propos de ce site Web / About this Web site </TITLE>
+  <STYLE="font-family: Arial; font-size: 12px"> </STYLE>
 </HEAD>
   
 <!-- 1 : Header -->
 <header>
-        <H4> A propos de cet site Web et de ses motivations </H4> 
+        <H4> A propos de ce site Web et de ses motivations / About this Web site </H4> 
 
         <div class="container">
                 <div class="row">
                     <div align = "center">
                     <img  src="../assets/img/about/about.jpg" class="img-responsive">
-                        <H4> A propos de cet site Web et de ses motivations </H4>
+                        <H4> A propos de ce site Web et de ses motivations </H4>
                         <H3>  ... </H3>
                     </div>
                 </div>
