Update Main/Tabs/About.html 2023-01-11-(008)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -7,11 +7,12 @@
 <!-- 0 : Head -->
 <HEAD>
 <TITLE> A propos de ce site Web / About this Web site </TITLE>
-  <STYLE="font-family: Arial; font-size: 12px"> </STYLE>
+
 </HEAD>
   
 <!-- 1 : Header -->
 <header>
+    <DIV STYLE="font-family: Arial; font-size: 12px">
         <H4> A propos de ce site Web et de ses motivations / About this Web site </H4> 
 
         <div class="container">
@@ -23,6 +24,7 @@
                     </div>
                 </div>
           </div>
+      </DIV>
 </header>
 
   <!-- 2 : Body -->
