Update Main/Tabs/About.html 2023-01-11-(008)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -19,7 +19,7 @@
                 <div class="row">
                     <div align = "center">
                     <img  src="../assets/img/about/about.jpg" class="img-responsive">
-                        <H4> A propos de ce site Web et de ses motivations </H4>
+                        <H4> D'où viens-je ? Où suis-je ? Où vais-je ? </H4>
                         <H3>  ... </H3>
                     </div>
                 </div>
@@ -29,6 +29,7 @@
 
   <!-- 2 : Body -->
 <BODY>
+<DIV STYLE="font-family: Arial; font-size: 12px">
 <H2> Ce qui me meut ... </H2><H4> par le Professeur Calculus </H4>
 
 Depuis tout petit, j'aime bien jouer avec les données afin de les faire parler et de leur demander de décrire le passé et le présent.
@@ -55,6 +56,8 @@ Et, ainsi, de fil en aiguille, je me suis intéressé au calcul numérique inten
 Et là, la palette des applications est potentiellement illimitée ... <br>
 Or j'aime l'infini ...<br>
 <br>
+
+  </DIV>
 </BODY>
 
 <!-- 3 : Footer -->
