Update Main/Tabs/About.html 2023-01-11-(009)

--- a/tabs/about.html
+++ b/tabs/about.html
@@ -13,7 +13,7 @@
 <!-- 1 : Header -->
 <header>
     <DIV STYLE="font-family: Arial; font-size: 12px">
-        <H4> A propos de ce site Web et de ses motivations / About this Web site </H4> 
+        <H3> A propos de ce site Web et de ses motivations / About this Web site </H3> 
 
         <div class="container">
                 <div class="row">
@@ -30,7 +30,7 @@
   <!-- 2 : Body -->
 <BODY>
 <DIV STYLE="font-family: Arial; font-size: 12px">
-<H2> Ce qui me meut ... </H2><H4> par le Professeur Calculus </H4>
+  <H2> <b> Ce qui me meut ... </b> </H2><H4> par le Professeur Calculus </H4>
 
 Depuis tout petit, j'aime bien jouer avec les données afin de les faire parler et de leur demander de décrire le passé et le présent.
 Et, même, parfois, de prédire l'avenir ... <br>
@@ -74,7 +74,7 @@ Or j'aime l'infini ...<br>
 
 <br> <br>
 <H4> Pour en savoir plus sur le Professeur Calculus / For more information about Pr. Calculus </H4> 
-<H5> Voici l'adresse Linkedin  / Here is the Linkedin adress <a href="https://fr.linkedin.com/in/didier-certain-46950a1"> Linkedin </a> </H5>
+<H5> Voici son adresse Linkedin  / Here is his Linkedin adress <a href="https://fr.linkedin.com/in/didier-certain-46950a1"> Linkedin </a> </H5>
 
 </FOOTER>
 
